provider/kubernetes/fixtures/templateBreakingIngresssValues_ingresses.yml
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: testing-"foo"
  namespace: testing
spec:
  rules:
  - host: foo
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
        path: /bar

---
apiVersion: v1
kind: Ingress
metadata:
  namespace: testing
spec:
  rules:
  - host: testing-"foo"
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
        path: /bar

---
apiVersion: v1
kind: Ingress
metadata:
  namespace: testing
spec:
  rules:
  - host: foo
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
        path: /testing-"foo"
